--- a/Ejercicio2_Empleados-1/src/main/resources/application.properties
+++ b/Ejercicio2_Empleados-1/src/main/resources/application.properties
@@ -18,3 +18,8 @@ spring.jpa.hibernate.ddl-auto=none
 
 #Puerto del servidor Tomcat
 server.port=8080
+
+# Spring Security
+spring.security.user.name=root
+spring.security.user.password=root
+spring.security.user.roles=admin
