--- a/Ejercicio2_Empleados-1/src/main/resources/application.properties
+++ b/Ejercicio2_Empleados-1/src/main/resources/application.properties
@@ -3,11 +3,11 @@
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 #Url donde esta el servicio de tu mysql y el nombre de la base de datos
-spring.datasource.url=jdbc:mysql://192.168.1.138:3306/piezas_y_proveedores
+spring.datasource.url=jdbc:mysql://eu-cdbr-west-03.cleardb.net/heroku_7d508a99e17f34a
 
 #Usuario y contrasena para tu base de datos descrita en la linea anterior
-spring.datasource.username=local
-spring.datasource.password=Local123@
+spring.datasource.username=b4546817fb6f43
+spring.datasource.password=f53169f6
 
 
 #Imprime en tu consola las instrucciones hechas en tu base de datos.
@@ -20,6 +20,6 @@ spring.jpa.hibernate.ddl-auto=none
 server.port=8080
 
 # Spring Security
-spring.security.user.name=root
-spring.security.user.password=root
+spring.security.user.name=izan
+spring.security.user.password=1234
 spring.security.user.roles=admin
