--- a/Ejercicio_2_Los_cientificos/src/main/resources/application.properties
+++ b/Ejercicio_2_Los_cientificos/src/main/resources/application.properties
@@ -3,11 +3,11 @@
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 #Url donde esta el servicio de tu mysql y el nombre de la base de datos
-spring.datasource.url=jdbc:mysql://192.168.1.138:3306/cientificos
+spring.datasource.url=jdbc:mysql://eu-cdbr-west-03.cleardb.net/heroku_1b1a48893bd7f7b
 
 #Usuario y contrasena para tu base de datos descrita en la linea anterior
-spring.datasource.username=local
-spring.datasource.password=Local123@
+spring.datasource.username=beb0f63349e1d7
+spring.datasource.password=6a15a32c
 
 
 #Imprime en tu consola las instrucciones hechas en tu base de datos.
@@ -19,3 +19,7 @@ spring.jpa.hibernate.ddl-auto=none
 #Puerto del servidor Tomcat
 server.port=8080
 
+# Spring Security
+spring.security.user.name=izan
+spring.security.user.password=1234
+spring.security.user.roles=admin
