--- a/Ejercicio2_Empleados-1/src/main/resources/application.properties
+++ b/Ejercicio2_Empleados-1/src/main/resources/application.properties
@@ -20,6 +20,6 @@ spring.jpa.hibernate.ddl-auto=none
 server.port=8080
 
 # Spring Security
-spring.security.user.name=izan
-spring.security.user.password=1234
-spring.security.user.roles=admin
+# spring.security.user.name=izan
+# spring.security.user.password=1234
+# spring.security.user.roles=admin
